--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "countdown": "^2.6.0",
-    "material-ui": "^1.0.0-beta.39",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "material-ui": "^1.0.0-beta.42",
+    "@material-ui/icons": "^1.0.0-beta.42",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
