--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "pomodoro",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Caruso33/pomodoR.git"
+  },
+  "homepage": "caruso33.github.io/pomodoR",
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.42",
     "countdown": "^2.6.0",
+    "gh-pages": "^1.1.0",
     "material-ui": "^1.0.0-beta.42",
     "npm": "^6.0.0",
     "react": "^16.3.1",
@@ -12,6 +18,8 @@
     "react-scripts": "^1.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
