--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   ],
   "homepage": "https://caruso33.github.io/pomodoR/",
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
-    "countdown": "^2.6.0",
+    "@material-ui/core": "3.9.3",
+    "@material-ui/icons": "3.0.2",
+    "@material-ui/styles": "3.0.0-alpha.10",
+    "countdown": "2.6.0",
     "gh-pages": "^1.1.0",
-    "material-ui": "^1.0.0-beta.47",
     "npm": "^6.0.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
