--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "npm": "^6.0.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-jss": "^8.6.1",
     "react-scripts": "^1.1.4"
   },
   "scripts": {
